--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,8 @@ header {
   height: 50px;
 }
 
-p, a {
+p,
+a {
   margin: 5% 10%;
 }
 
@@ -30,25 +31,24 @@ a {
   border-radius: 5px;
   text-align: center;
   display: inline-block;
-  transition: all .3s;
+  transition: all 0.3s;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
 }
 
 .btn {
   background-color: #1b809f;
   color: white;
-  font-family: 'Gemunu Libre', sans-serif;
+  font-family: "Gemunu Libre", sans-serif;
   border-radius: 5px;
   text-decoration: none;
   padding: 5px 35px;
   transition: background-color 200ms ease;
-  font-size:clamp(1rem, 1vw, 2rem);
- }
-
- a.btn:hover {
-  background-color: #dbdedf;
+  font-size: clamp(1rem, 1vw, 2rem);
 }
 
+a.btn:hover {
+  background-color: #dbdedf;
+}
 
 nav ul {
   display: flex;
@@ -89,10 +89,7 @@ nav ul {
   font-weight: 400;
 }
 
-
-
 /*--- Main gallery section starts here ---*/
-
 
 main {
   display: grid;
@@ -106,7 +103,7 @@ main {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   justify-items: center;
-  align-items: center; 
+  align-items: center;
   list-style-type: none;
   margin-bottom: 100px;
 }
@@ -115,9 +112,9 @@ figure > a {
   max-height: 400px;
   width: 90%;
   overflow: hidden;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   position: relative;
-  border: 1px solid #E2E2E2;
+  border: 1px solid #e2e2e2;
   box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
   cursor: pointer;
@@ -138,7 +135,7 @@ figure > a > img {
 figure > a > figcaption {
   position: absolute;
   text-align: center;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   font-size: 25px;
   text-shadow: 1px 1px black;
   bottom: 0;
@@ -149,14 +146,11 @@ figure > a > figcaption {
 
 figure > a > figcaption > h3 {
   color: white;
-  padding: .75rem;
+  padding: 0.75rem;
   font-size: 1.25rem;
 }
 
-
-
 /* Footer section starts here */
-
 
 footer {
   background-color: #000000;
